# compuG_lab-2026

./: LICENSE
practicas/p_03/: Main_P3.cpp  Main_P3.out
practicas/p_04/: Main_Modelado.cpp  Main_Modelado.out  Makefile
practicas/p_04/Shader/: core.frag  core.vs
practicas/p_05/: Modelado_Jerarquico.cpp  Modelado_Jerarquico.out
practicas/p_06/Main/: Carga_de_Modelos.cpp  Carga_de_Modelos.out
practicas/p_07/: Texturizado.cpp
practicas/p_07/Shader/: lamp.frag  lamp.vs
practicas/p_10/: Animacion_Basica.cpp  Makefile
practicas/p_11/: Maquina_estados.cpp
previos/previo04/ModeladoGeometrico/: Main_Modelado.cpp
previos/previo05/: Modelado_Jerarquico.cpp  Modelado_Jerarquico.out
previos/previo06/Main/: Carga_de_Modelos.cpp  Carga_de_Modelos.out
previos/previo07/: Makefile  Texturizado.cpp
previos/previo07/Shader/: lamp.frag  lamp.vs  modelLoading.frag
previos/previo09/previo09/: CMakeLists.txt  fuentesDeLuz.cpp
previos/previo09/previo09/Shader/: lighting.frag
previos/previo10/: Animacion_Basica.cpp  CMakeLists.txt
previos/previo11/: CMakeLists.txt  Maquina_estados.cpp  Model.h
